# DBJavaGenix

./: .gitignore  AGENTS.md  LICENSE  README.md  dbjavagenix-mcp-server-0.1.0.tgz  index.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-min.txt  requirements.txt  start-mcp.bat  start-mcp.ps1
.claude/: settings.local.json
config/: ASCII_ICON.txt  config.example.yaml  test.yaml
src/dbjavagenix/: __init__.py  cli.py  cli_helpers.py
src/dbjavagenix/ai/: __init__.py
src/dbjavagenix/config/: config_manager.py  default_type_mapping.yaml
src/dbjavagenix/core/: __init__.py  exception_handler.py  exceptions.py  models.py
src/dbjavagenix/database/: __init__.py  codegen_tools.py  connection_manager.py  mcp_tools.py
src/dbjavagenix/generator/: __init__.py  java_generator.py  mustache_engine.py  template_context.py
src/dbjavagenix/server/: __init__.py  mcp_server.py
src/dbjavagenix/templates/: README.md
src/dbjavagenix/templates/java/Default/: controller.mustache  dao.mustache  entity.mustache  mapper.mustache  mapper.xml.mustache  service.mustache  serviceImpl.mustache
src/dbjavagenix/templates/java/MybatisPlus/: controller.mustache  dao.mustache  entity.mustache  service.mustache  serviceImpl.mustache
src/dbjavagenix/templates/java/MybatisPlus-Mixed/: controller.mustache  dao.mustache  mapper.mustache  service.mustache  serviceImpl.mustache
src/dbjavagenix/templates/java/common/: mybatis_plus_config.mustache
src/dbjavagenix/utils/: __init__.py  auto_dependency_manager.py  dependency_manager.py  dependency_requirements.py  pom_analyzer.py  table_prefix_analyzer.py
