[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbjavagenix"
version = "0.1.0"
description = "AI-enhanced Java code generator based on MCP service architecture"
authors = [
    {name = "ZXP", email = "2638265504@qq.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["mcp", "code-generation", "java", "database", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Database",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pystache>=0.6.0",
    "aiofiles>=23.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.scripts]
dbjavagenix = "dbjavagenix.cli:main"
dbjavagenix-server = "dbjavagenix.server:main"

[project.urls]
Homepage = "https://github.com/dbjavagenix/dbjavagenix"
Documentation = "https://dbjavagenix.readthedocs.io"
Repository = "https://github.com/dbjavagenix/dbjavagenix.git"
Issues = "https://github.com/dbjavagenix/dbjavagenix/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dbjavagenix = ["templates/**/*", "config/**/*"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/dbjavagenix --cov-report=term-missing --cov-report=html"
asyncio_mode = "auto"